# tap-cassandra

./: README.md  docker-compose.yml  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_cassandra/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
tests/resources/: catalog.json
